Fix #35524: fix XSS in admin table

--- a/src/main/resources/templates/app.html
+++ b/src/main/resources/templates/app.html
@@ -154,7 +154,7 @@
                                             th:text="${value}"></option>
                                 </select>
                                 <span class="help-block" th:if="${parameterDefinition.getDescription() != null}"
-                                      th:utext="${parameterDefinition.getDescription()}"></span>
+                                      th:utext="${@thymeleaf.cleanHtml(parameterDefinition.getDescription())}"></span>
                             </div>
                         </div>
 
