--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -63,7 +63,7 @@
                         </th:block>
                         <span class="app-list-title app-list-title-after" th:text="${app.displayName == null} ? ${app.id} : ${app.displayName}"></span>
                     </a>
-                    <span class="app-list-description" th:if="${app.description != null}" th:utext="${app.description}"></span>
+                    <span class="app-list-description" th:if="${app.description != null}" th:utext="${@thymeleaf.cleanHtml(app.description)}"></span>
                 </div>
             </th:block>
         </th:block>
@@ -75,7 +75,7 @@
                      th:class="${myAppsMode == 'Inline' ? 'col-xs-12 col-md-4 col-md-offset-3 col-lg-5 col-lg-offset-3' : 'col-lg-6 col-lg-offset-3'}">
                     <div class="alert alert-warning notification-message" role="alert" th:if="${notificationMessage != null}">
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <p th:utext="${notificationMessage}"> </p>
+                        <p th:utext="${@thymeleaf.cleanHtml(notificationMessage)}"> </p>
                     </div>
                     <div class="alert alert-info" role="alert"
                          th:if="${groupedApps.isEmpty() && ungroupedApps.isEmpty()}">
